--- a/index.html
+++ b/index.html
@@ -526,21 +526,16 @@
             <div class="tab-content active" id="enrichment">
                 <div class="solution-content">
 
-                    <!-- LEFT CONTENT -->
+                    <!-- LEFT CRAD -->
                     <div class="solution-text">
-
-
-                        <!-- FEATURE CARDS -->
                         <div class="enrichment-features">
                             <img src="assets/enrichment_cards.png" alt="CRM Data Enrichment Features"
                                 class="enrichment-full-img">
                         </div>
                     </div>
 
-                    <!-- RIGHT CONTENT -->
+                    <!-- RIGHT CARD -->
                     <div class="solution-mockup">
-
-
                         <div class="waterfall-diagram">
                             <img src="assets/waterfall_enrichment.png" alt="Waterfall Enrichment Diagram"
                                 class="waterfall-full-img">
@@ -551,7 +546,7 @@
             </div>
 
 
-            <div class="tab-content" id="sync">
+            <!-- <div class="tab-content" id="sync">
                 <div class="solution-content">
                     <h3>Bi-directional CRM Sync</h3>
                     <p>Seamlessly sync data between LinkedIn and your CRM</p>
@@ -570,7 +565,7 @@
                     <h3>AI-Powered Productivity</h3>
                     <p>Leverage AI for smarter outreach</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
